# Tengine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTOR.md  How_To_Build_Android.md  How_To_Build_Linux.md  LICENSE  Makefile  README.md  README_EN.md  Test_report_Tengine.docx  android_build.sh  android_build_armv7.sh  android_build_armv8.sh  android_config.txt  android_pack.sh  build.sh  build_android.sh  linux_build.sh  makefile.config.example  release.sh  tengine-opencv.zip.REMOVED.git-id
benchmark/: CMakeLists.txt  Makefile  README.md  tm_benchmark.c  tm_benchmark.cc
benchmark/common/: cmdline.hpp  timer.cc  timer.hpp
benchmark/models/: googlenet_benchmark.tmfile  mssd_benchmark.tmfile  resnet50_benchmark.tmfile  retinaface_benchmark.tmfile  squeezenet_v1.1_benchmark.tmfile  vgg16_benchmark.tmfile
benchmark/src/: bench_mobilenet.cpp  bench_mobilenet_old_api.cpp  bench_sqz.cpp  benchmark.cpp
cmake/: core.cmake  (+14 more)
demos/: CMakeLists.txt  demo_arcface_image.cc  demo_arcface_list.cc  demo_centerface_image.cc  demo_centerface_list.cc  demo_scrfd_camera.cc  demo_scrfd_image.cc  demo_scrfd_list.cc  demo_yolo_camera.cpp  timer.cpp  timer.hpp  types.hpp  yolo.cpp  yolo.hpp  yolo_layer.cpp  yolo_layer.hpp
demos/algorithm/: arcface.cc  arcface.hpp  centerface.cc  centerface.hpp  scrfd.cc  scrfd.hpp  yolo.cpp  yolo.hpp  yolo_layer.cpp  yolo_layer.hpp
demos/utilities/: affine.cc  affine.hpp  cmdline.hpp  distance.cc  distance.hpp  iou.cc  iou.hpp  letterbox.cc  letterbox.hpp  nms.cc  nms.hpp  permute.cc  permute.hpp  timer.cc  timer.hpp
examples/: CMakeLists.txt  README.md  README_EN.md  android_build.sh  android_build_armv7.sh  android_build_armv8.sh  classification.cpp  classification.py  classification_cv.cpp  classification_old_api.cpp  classification_timvx.py  common.cpp  common.hpp  cpp_tm_BERT.cpp  cpp_tm_classification.cpp  cpp_tm_mobilenet_ssd.cpp  faster_rcnn.cpp  faster_rcnn_old_api.cpp  landmark.py  linux_arm_build.sh  linux_build.sh  mobilenet_ssd.cpp  mobilenet_ssd.py  mobilenet_ssd_cv.cpp  mobilenet_ssd_old_api.cpp  mobilenetv2_yolov3.cpp  mobilenetv2_yolov3_old_api.cpp  ncnn_mbv2yolov3.cpp  ncnn_mobilenet.cpp  ncnn_mobilenetssd.cpp  ncnn_squeezenet.cpp  ncnn_yolact.cpp  readme.md  retinaface.py  retinaface_old_api.cpp  ssd.cpp  test_insight_face.cpp  tm_alphapose.cpp  tm_apollo_smoke.cpp  tm_bert.cpp  (+75 more)
examples/YuFaceDetectNet/: CMakeLists.txt  readme.md  yu_facedetect.cpp
examples/benchmark/: CMakeLists.txt  bench_classification.cpp  bench_mobilenet.cpp  bench_sqz.cpp  common_util.hpp  image_process.hpp  test_convolution.c
examples/caffe_wrapper/: CMakeLists.txt
examples/common/: common.cpp  common.h  common.hpp  libjsoncpp.so.1.9.4  msc_getopt.h  stb_image.h  stb_image_write.h  tengine_operations.c  tengine_operations.h  test_nnie_all.hpp  tokenization.cpp  tokenization.h
examples/faster_rcnn/: CMakeLists.txt  faster_rcnn.cpp  readme.md
examples/imagenet_classification/: CMakeLists.txt  classification.cpp  model_config.cpp  model_config.hpp  readme.md
examples/lighten_cnn/: CMakeLists.txt  lighten_cnn.cpp  readme.md
examples/mobilenet_ssd/: CMakeLists.txt  mssd.cpp  readme.md
examples/mtcnn/: CMakeLists.txt  mtcnn.cpp  mtcnn.hpp  mtcnn_utils.cpp  mtcnn_utils.hpp  readme.md  test_mtcnn.cpp
examples/pipeline/: .gitignore  CMakeLists.txt  LICENSE
examples/resnet50/: CMakeLists.txt  readme.md  resnet50.cpp  utils.cpp  utils.hpp
examples/ssd/: CMakeLists.txt  readme.md  ssd.cpp
examples/tengine_model/: CMakeLists.txt
examples/tensorflow_wrapper/: CMakeLists.txt
examples/yolov2/: CMakeLists.txt  readme.md  yolov2.cpp
source/: CMakeLists.txt  defines.h.in
source/api/: c_api.c  c_api.h  c_api_ex.h  plugin.c
source/device/: CMakeLists.txt  device.c  device.h  register.h.in
source/executer/: executer.c  executer.h
source/graph/: graph.c  graph.h  node.c  node.h  subgraph.c  subgraph.h  tensor.c  tensor.h
source/module/: module.c  module.h
source/olreport/: basesocket.c  clientsocket.c  md5.c  onlinereportfmtdat.c  onlinereportmgr.c  onlinereportutil.c  reportbasedata.c  reportdata.c  tenginereportmgr.c  thread.c
source/operator/: CMakeLists.txt  op.c  op.h  op_name.h  prototype.h.in
source/optimizer/: estimation.c  estimation.h  helper.c  helper.h  split.c  split.h
source/scheduler/: CMakeLists.txt  scheduler.c  scheduler.h
source/serializer/: CMakeLists.txt  register.h.in  serializer.c  serializer.h
source/system/: cpu.c  cpu.h
source/utility/: float.c  float.h  lock.c  lock.h  log.c  log.h  math.c  math.h  mem_stat.c  mem_stat.h  sys_port.c  sys_port.h  utils.c  utils.h  vector.c  vector.h
src/: CMakeLists.txt
src/lib/: cpu.c  dev_allocator.c  exec_graph.c  exec_scheduler.c  hash.c  hash_impl.c  hcl_version.c  map.c  mem_stat.c  module.c  nn_device.c  sys_port.c  tengine_c_api.c  tengine_cpp_api.cpp  tengine_errno.c  tengine_exec.c  tengine_ir.c  tengine_ir_pack.c  tengine_log.c  tengine_op.c  tengine_plugin.c  tengine_serializer.c  tengine_utils.c  vector.c
src/op/: absval.c  add_n.c  argmax.c  argmax_param.h  argmin.c  argmin_param.h  batchnorm.c  batchnorm_param.h  batchtospacend.c  batchtospacend_param.h  bias.c  broadmul.c  cast.c  cast_param.h  ceil.c  clip.c  clip_param.h  comparison.c  comparison_param.h  concat.c  concat_param.h  const.c  const_op.c  convolution.c  convolution_param.h  crop.c  crop_param.h  deconv_param.h  deconvolution.c  depthtospace.c  depthtospace_param.h  detection_output.c  detection_output_param.h  detection_postprocess.c  detection_postprocess_param.h  dropout.c  eltwise.c  eltwise_param.h  elu.c  elu_param.h  (+132 more)
tengine-module/: CMakeLists.txt  README.md
tengine-module/plugin/: CMakeLists.txt
tests/: CMakeLists.txt  Makefile  test.sh  test_arm32.sh  test_arm64.sh  test_arm64_real.sh  test_arm64_trt.sh  test_onnx_model.sh
tools/: .clang-format  CMakeLists.txt  How_To_Build.md  Makefile  android_build.sh  android_install.sh  cmake.toolchains  cross_build.sh  default.config  linux_build.sh  readme.md  test_classnet.md  test_yolov2.md
(+4082 files in other folders)
